--- a/.gitmodules
+++ b/.gitmodules
@@ -1,14 +1,12 @@
-[submodule "contrib/abseil-cpp"]
-	path = contrib/abseil-cpp
-	url = git@github.com:abseil/abseil-cpp.git
-[submodule "contrib/gflags"]
-	path = contrib/gflags
-	url = git@github.com:gflags/gflags.git
-[submodule "contrib/grpc"]
-	path = contrib/grpc
-	url = git@github.com:grpc/grpc.git
-    branch = v1.16.x
-[submodule "contrib/protobuf"]
-    path = contrib/protobuf
+[submodule "src/contrib/protobuf"]
+	path = src/contrib/protobuf
 	url = git@github.com:protocolbuffers/protobuf.git
-    branch = 3.6.x
+[submodule "src/contrib/abseil-cpp"]
+	path = src/contrib/abseil-cpp
+	url = git@github.com:abseil/abseil-cpp.git
+[submodule "src/contrib/gflags"]
+	path = src/contrib/gflags
+	url = git@github.com:gflags/gflags.git
+[submodule "src/contrib/grpc"]
+	path = src/contrib/grpc
+	url = git@github.com:grpc/grpc.git
