--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -13,5 +13,4 @@ RUN cd /tmp/gcppg && \
     cmake .. && \
     make -j $(($(nproc --all) * 3 / 2))
 
-RUN mkdir -p /opt/gcppg && \
-    cp /tmp/gcppg/build/gcppg /opt/gcppg
+RUN cp /tmp/gcppg/build/src/gcppg /opt/
